# cranelift-jit-demo

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: toy.yml
examples/: toy.rs
src/: builtins.rs  frontend.rs  grammar.rustpeg  jit.rs  lib.rs  toy.rs
