[package]
name = "cranelift-jit-demo"
version = "0.0.0"
authors = ["The Cranelift Project Developers"]
license = "Apache-2.0 WITH LLVM-exception"
repository = "https://github.com/bytecodealliance/cranelift-jit-demo"
description = "Toy language implemented using cranelift-jit"
edition = "2018"

[dependencies]
peg = "0.8.1"
cranelift = "0.89.1"
cranelift-module = "0.89.1"
cranelift-jit = "0.89.1"
